# Vympel

./: .gitignore  algorithms.py  black_detection.py  color.py  connect_rasp  energy.py  fft.py  image_process.py  install_instruction.md  instruction.md  main.py  point.npy  read_data.py  u_client.py  u_server.py  utils.py  video.py  video_processing.py  write_data.py
ServiceProgram/: ServiceProgram.pro  configreader.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  udp.cpp  udp.h  utility.h
ble_service/: CMakeLists.txt  CMakePresets.json  cln  listen.py  run  run_tests  test_main
ble_service/application/: CMakeLists.txt  bleService.cpp  bleService.hpp  bluetoothDevice.cpp  interface.hpp  main.cpp  udp.cpp  udp.hpp  utility.hpp
ble_service/conf/: config.json
finish/: cv.py  send_data.py
mvp/: algorithms.py  black_detection.py  camera_ip.py  read_data.py  utils.py  video.py  video_processing.py
mvp/draw_data/: mainwindow.cpp  mainwindow.h  mainwindow.ui
mvp/finish/: cv.py  filter.py  send_data.py
mvp/udp_test/: mainwindow.cpp  udp_test.pro
prod/: BUILD.sh  CMakeLists.txt  CMakePresets.json  README.md  RUN.sh  bl.py  bld  bluetoothDevice.cpp  bluetoothDevice.hpp  cln  core.cpp  core.hpp  io_interface.hpp  listen.py  main.cpp  optimization.py  run  run_tests  run_video.py  sender.py  udp.cpp  udp.hpp
prod/app/: CMakeLists.txt  app.cpp  bluetoothDevice.cpp  bluetoothDevice.hpp  core.cpp  core.hpp  cv.cpp  cv.hpp  interface.hpp  main.cpp  udp.cpp  udp.hpp  utility.hpp
prod/application/: CMakeLists.txt  LibCamera.cpp  LibCamera.h  app.cpp  app.hpp  bluetoothDevice.cpp  bluetoothDevice.hpp  configReader.hpp  core.cpp  core.hpp  cv.cpp  cv.hpp  details.hpp  event.cpp  event.hpp  fsm.cpp  fsm.hpp  interface.hpp  logger.hpp  main.cpp  math.hpp  network.cpp  network.hpp  udp.cpp  udp.hpp  utility.hpp
prod/conf/: config.json  config1.json
prod/scripts/: bopcd.py  cumsum.py  cumsum1.py  gauss.json  listen.py  opt.py  optimization.py  proc.py  readLog.py  run_video.py  test_opt.py  video_data.py  write_data.py
prod/scripts/data/: 1.npy  11.npy  12.npy  2.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy  DecanW-21,8HC+10_0,2.mp4.json  DecanW-21,8HC+10_1.mp4.json  DecanW-21,8HC+5_0,2.mp4.json  DecanW-21,8HC+5_1.mp4.json  DecanW-21,8HC-10_0,2.mp4.json  DecanW-21,8HC-10_1.mp4.json  DecanW-21,8HC-5_0,2.mp4.json  DecanW-21,8HC-5_1.mp4.json  DecanW-21,8HC0_1.mp4.json  gauss.json  video.mp4.json
prod/tests/: CMakeLists.txt  generator.py  processUnit.hpp  testData  test_main.cpp  tests.cpp
prod/tests/unit_tests/: CMakeLists.txt  unit_tests.cpp
udp_test/: mainwindow.cpp  mainwindow.h  mainwindow.ui
